packages/headless-styles/src/components/Pagination/paginationCSS.module.css
.paginationBtnBase {
  composes: pandoBtn from '../shared/button.module.css';
}

.paginationBtnBorder {
  composes: pandoBtnBorder from '../shared/button.module.css';
}

.paginationBtnRadius {
  composes: pandoBtnRadius from '../shared/button.module.css';
}

.paginationContainer {
  align-items: center;
  display: flex;
  gap: 1rem;
  width: 100%;
}

.morePaginationContainer {
  composes: paginationContainer;
  justify-content: center;
}

.newerOlderPaginationContainer {
  composes: paginationContainer;
  justify-content: center;
}

.barPaginationContainer {
  composes: paginationContainer;
  justify-content: flex-end;
}

.paginationBtn {
  composes: paginationBtnBase paginationBtnBorder paginationBtnRadius;
  background-color: var(--ps-background);
  border-radius: 6px;
  color: var(--ps-text);
  height: 2rem;
  min-width: initial;
  padding-inline-end: 1rem;
  padding-inline-start: 1rem;
}

.paginationBtn:hover {
  background-color: var(--ps-background-hover);
}

.paginationNewer {
  composes: paginationBtn;
}

.paginationOlder {
  composes: paginationBtn;
  margin-left: 0.5rem;
}

.paginationText {
  color: var(--ps-text-medium);
}

.paginationText > strong {
  color: var(--ps-text-strong);
}

